syntax = "proto3";

option java_multiple_files = true;
option java_package = "via.sdj3.animalregistrationsystem_sdj3.protobuf";

service Animal {
    rpc saveAnimal(SaveAnimalRequest) returns(SaveAnimalResponse);
    rpc findByIdAnimal(FindByIdRequestAnimal) returns(FindByIdResponseAnimal);
    rpc updateAnimal(UpdateAnimalRequest) returns(UpdateAnimalResponse);
    rpc deleteByIdAnimal(DeleteByIdRequestAnimal) returns(EmptyAnimal);

    rpc findAllAnimal(EmptyAnimal) returns (AllAnimals);
    rpc findByDateAnimal(FilterByDateRequestAnimal) returns (AllAnimals);
    rpc getMaxIdAnimal(EmptyAnimal) returns (GetMaxIdResponseAnimal);
    rpc findByOriginAnimal(GetFromOriginRequestAnimal) returns (AllAnimals);
    rpc findAllProductsFromAnimal(FindByIdRequestAnimal) returns (Products);
    rpc getAnimalsInvolvedIntoProduct(FindByIdRequestAnimal) returns (AllAnimals);
}

    message SaveAnimalRequest {
        int32 year = 1;
        int32 month = 2;
        int32 day = 3;
        double weight = 4;
        int64 animalNo = 5;
        string origin = 6;
    }
    message SaveAnimalResponse {
        int32 year = 1;
        int32 month = 2;
        int32 day = 3;
        double weight = 4;
        int64 animalNo = 5;
        string origin = 6;
    }
    message AnimalMessage {
        int32 year = 1;
        int32 month = 2;
        int32 day = 3;
        double weight = 4;
        int64 animalNo = 5;
        string origin = 6;
    }


    message FindByIdRequestAnimal {
        int64 id =1;
    }

    message UpdateAnimalRequest {
        int32 year = 1;
        int32 month = 2;
        int32 day = 3;
        double weight = 4;
        int64 animalNo = 5;
        string origin = 6;
    }
    message UpdateAnimalResponse {
        int32 year = 1;
        int32 month = 2;
        int32 day = 3;
        double weight = 4;
        int64 animalNo = 5;
        string origin = 6;
    }
    message DeleteByIdRequestAnimal {
        int64 id =1;
    }


    message FindByIdResponseAnimal {
        int32 year = 1;
        int32 month = 2;
        int32 day = 3;
        double weight = 4;
        int64 animalNo = 5;
        string origin = 6;
    }

    message AllAnimals
    {
        repeated AnimalMessage animal = 1;
    }

    message FilterByDateRequestAnimal
    {
        int32 year = 1;
        int32 month = 2;
        int32 day = 3;
    }

    message GetMaxIdResponseAnimal
    {
        int64 max_id = 1;
    }

    message GetFromOriginRequestAnimal
    {
        string origin = 1;
    }

    message EmptyAnimal{
    }

    message Products
    {
        repeated ProductMessageAnimal products = 1;
    }

    message ProductMessageAnimal
    {
        int64 registrationNo = 1;
        int64 trayId = 2;
        int32 partNo = 3;
    }

